# nidus-core

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 19a1219e525e_refactor_to_use_shared_mixins.py  9d69e3f023a5_initial_tenant_model.py  d99451053c8c_enable_rls_for_tenants.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  db.py  filters.py  pagination.py  rls.py  security.py
backend/app/core/exceptions/: base.py  handlers.py
backend/app/core/i18n/: request.py  service.py
backend/app/models/: __init__.py  base.py
backend/app/models/identity/: __init__.py  invitation.py  member.py  role.py  scopes.py  user.py
backend/app/models/organization/: __init__.py  organization.py
backend/app/schemas/: health.py  tenant.py
backend/app/schemas/filters/: identity.py
backend/app/schemas/requests/: auth.py  identity.py  (+5 more)
backend/app/services/: auth_service.py  email_service.py  identity_service.py  organization_service.py  tenant_service.py  user_service.py
backend/app/shared/: database.py  models.py
backend/scripts/: migrate_test_db.py  setup_security.sql
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_iam.py  test_identity.py  test_invitation_accept.py  test_members.py  test_multi_org.py  test_organization.py  test_password.py  test_scope_guard.py
backend/tests/integration/: test_health.py  test_rls.py
backend/tests/unit/: test_scopes.py
(+135 files in other folders)
